--- a/crossword-squared/07.html
+++ b/crossword-squared/07.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>5x5 crossword 06</title>
+		<title>5x5 crossword 07</title>
 		<link rel="stylesheet" href="style.css"/>
-		<script>let goal = "pradareferinoilmergeowens"; let crossnum = 5</script>
+		<script>let goal = "maratomegaoasesezinedents"; let crossnum = 6</script>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<link rel="icon" type="../image/png" href="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/Favicon.png">
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
-		<meta property="og:title" content="5x5 crossword 06" />
-		<meta property="og:description" content="The sixth five-by-five crossword in a series of twenty-five." />
+		<meta property="og:title" content="5x5 crossword 07" />
+		<meta property="og:description" content="The seventh five-by-five crossword in a series of twenty-five." />
 		<meta property="og:image" content="https://github.com/EwonRael/EwonRael.github.io/raw/master/crossword/preview.png" />
 	</head>
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
-		<h1>crossword 06</h1>
-		<div id="explain">
-			<p>Today&rsquo;s crossword features guest clue-writer Ben Swithen!</p>
-		</div>
+		<h1>crossword 07</h1>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -58,19 +55,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, flase)">1.&emsp;A diabolical brand</p>
-			<p onclick="clue(6, true)">6.&emsp;Presumably this was done to sporting judges</p>
-			<p onclick="clue(11, true)">7.&emsp;The plight of a stricken cormorant</p>
-			<p onclick="clue(16, true)">8.&emsp;Mutual Absorption</p>
-			<p onclick="clue(21, false)">9.&emsp;Nowhere can be found such sheriffs; Belonging to Luke Skywalker's uncle</p>
+			<p onclick="clue(1, true)">1.&emsp;Eighteenth century French revolutionary leader, Jean-Paul</p>
+			<p onclick="clue(6, true)">6.&emsp;Fish oil is high in a fatty acid?</p>
+			<p onclick="clue(11, true)">7.&emsp;Break from the heat of desert</p>
+			<p onclick="clue(16, true)">8.&emsp;Like <q>email</q> but for underground publications</p>
+			<p onclick="clue(21, true)">9.&emsp;Strangers have added these to my car</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;If you end with Alpha, the Greek alphabet starts with one; the first Al or Levi to come to mind</p>
-			<p onclick="clue(2, false)">2.&emsp;The best alternative to returning a library book</p>
-			<p onclick="clue(3, false)">3.&emsp;All ships begin with one of these</p>
-			<p onclick="clue(4, false)">4.&emsp;Take an action beneath one's dignity</p>
-			<p onclick="clue(5, false)">5.&emsp;A pirate's favourite miserables, or the child of a north English family</p>
+			<p onclick="clue(1, false)">1.&emsp;Cow expresses it shares the sentiment. <q>That&rsquo;s relatable</q></p>
+			<p onclick="clue(2, false)">2.&emsp;Describes a labyrinth of corn that will wonder and astonish!</p>
+			<p onclick="clue(3, false)">3.&emsp;Gives violin bow its edge, alternatively, to commit adultery a second time</p>
+			<p onclick="clue(4, false)">4.&emsp;Could be a realtor, could be a double?</p>
+			<p onclick="clue(5, false)">5.&emsp;I find this use of excessive force shocking!</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
